// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFoundPage should render CloudBeaver error page when is CloudBeaver page 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <section
          class="basic-result-wrapper css-7vto1s"
        >
          <div
            class="ant-result ant-result-info"
          >
            <div
              class="ant-result-icon"
            >
              <svg
                height="200"
                node-id="1"
                silly-vg="true"
                template-height="1024"
                template-width="1024"
                version="1.1"
                viewBox="0 0 1024 1024"
                width="200"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <defs
                  node-id="22"
                />
                <g
                  node-id="24"
                >
                  <path
                    d="M 914.08 708.00 C 914.08 742.34 871.74 775.28 796.37 799.57 C 721.00 823.85 618.78 837.50 512.19 837.50 C 405.61 837.50 303.39 823.85 228.02 799.57 C 152.65 775.28 110.31 742.34 110.31 708.00 C 110.31 673.65 152.65 640.71 228.02 616.43 C 303.39 592.14 405.61 578.50 512.19 578.50 C 618.78 578.50 721.00 592.14 796.37 616.43 C 871.74 640.71 914.08 673.65 914.08 708.00 Z"
                    fill="#f2f4ff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="6"
                    stroke="none"
                    target-height="259.00006"
                    target-width="803.77386"
                    target-x="110.30799"
                    target-y="578.4955"
                  />
                  <path
                    d="M 350.00 676.00 L 299.00 676.00 L 299.00 541.00 L 162.00 541.00 C 154.27 541.00 148.00 534.73 148.00 527.00 L 148.00 348.00 L 199.00 348.00 L 199.00 490.00 L 299.00 490.00 L 299.00 348.00 L 350.00 348.00 L 350.00 676.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="7"
                    stroke="none"
                    target-height="328.00006"
                    target-width="202"
                    target-x="148.00003"
                    target-y="347.99994"
                  />
                  <path
                    d="M 202.00 345.00 L 202.00 487.00 L 296.00 487.00 L 296.00 345.00 L 353.00 345.00 L 353.00 679.00 L 296.00 679.00 L 296.00 544.00 L 162.00 544.00 C 152.72 544.00 145.18 536.56 145.00 527.32 L 145.00 527.00 L 145.00 345.00 L 202.00 345.00 Z M 196.00 351.00 L 151.00 351.00 L 151.00 527.00 C 151.00 532.98 155.77 537.84 161.71 538.00 L 162.00 538.00 L 302.00 538.00 L 302.00 673.00 L 347.00 673.00 L 347.00 351.00 L 302.00 351.00 L 302.00 493.00 L 196.00 493.00 L 196.00 351.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="8"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00003"
                    target-x="145.00003"
                    target-y="344.99994"
                  />
                  <path
                    d="M 846.00 676.00 L 795.00 676.00 L 795.00 541.00 L 658.00 541.00 C 650.27 541.00 644.00 534.73 644.00 527.00 L 644.00 348.00 L 695.00 348.00 L 695.00 490.00 L 795.00 490.00 L 795.00 348.00 L 846.00 348.00 L 846.00 676.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="9"
                    stroke="none"
                    target-height="328.00006"
                    target-width="201.99994"
                    target-x="644"
                    target-y="347.99994"
                  />
                  <path
                    d="M 698.00 345.00 L 698.00 487.00 L 792.00 487.00 L 792.00 345.00 L 849.00 345.00 L 849.00 679.00 L 792.00 679.00 L 792.00 544.00 L 658.00 544.00 C 648.72 544.00 641.18 536.56 641.00 527.32 L 641.00 527.00 L 641.00 345.00 L 698.00 345.00 Z M 692.00 351.00 L 647.00 351.00 L 647.00 527.00 C 647.00 532.98 651.77 537.84 657.71 538.00 L 658.00 538.00 L 798.00 538.00 L 798.00 673.00 L 843.00 673.00 L 843.00 351.00 L 798.00 351.00 L 798.00 493.00 L 692.00 493.00 L 692.00 351.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="10"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00006"
                    target-x="641"
                    target-y="344.99994"
                  />
                  <g
                    node-id="25"
                  >
                    <path
                      d="M 559.07 454.69 L 559.07 505.69 L 421.00 578.00 L 421.00 527.00 Z"
                      fill="#0076fc"
                      fill-rule="evenodd"
                      group-id="1,2"
                      node-id="11"
                      stroke="none"
                      target-height="123.31146"
                      target-width="138.07074"
                      target-x="420.99988"
                      target-y="454.68848"
                    />
                  </g>
                  <g
                    node-id="26"
                  >
                    <path
                      d="M 562.07 507.50 L 560.46 508.35 L 422.39 580.66 L 418.00 582.96 L 418.00 525.18 L 419.61 524.34 L 557.68 452.03 L 562.07 449.73 L 562.07 507.50 Z M 556.07 503.87 L 556.07 459.65 L 424.00 528.81 L 424.00 573.04 L 556.07 503.87 Z"
                      fill="#000000"
                      fill-rule="nonzero"
                      group-id="1,3"
                      node-id="12"
                      stroke="none"
                      target-height="133.22687"
                      target-width="144.07074"
                      target-x="417.99988"
                      target-y="449.73077"
                    />
                  </g>
                  <path
                    d="M 547.00 676.00 L 447.00 676.00 L 396.00 676.00 L 396.00 348.00 L 598.00 348.00 L 598.00 676.00 L 547.00 676.00 Z M 447.00 399.00 L 447.00 625.00 L 547.00 625.00 L 547.00 399.00 L 447.00 399.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="13"
                    stroke="none"
                    target-height="328.00006"
                    target-width="202.00003"
                    target-x="396.00003"
                    target-y="347.99994"
                  />
                  <path
                    d="M 601.00 345.00 L 601.00 679.00 L 547.00 679.00 L 447.00 679.00 L 396.00 679.00 L 393.00 679.00 L 393.00 345.00 L 601.00 345.00 Z M 595.00 673.00 L 595.00 351.00 L 399.00 351.00 L 399.00 673.00 L 447.00 673.00 L 547.00 673.00 L 595.00 673.00 Z M 444.00 396.00 L 447.00 396.00 L 547.00 396.00 L 550.00 396.00 L 550.00 628.00 L 547.00 628.00 L 447.00 628.00 L 444.00 628.00 L 444.00 396.00 Z M 450.00 402.00 L 450.00 622.00 L 544.00 622.00 L 544.00 402.00 L 450.00 402.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="14"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00003"
                    target-x="393.00003"
                    target-y="344.99994"
                  />
                  <path
                    d="M 408.63 760.21 C 408.63 763.57 407.29 766.79 404.92 769.17 C 402.54 771.55 399.32 772.88 395.96 772.88 C 392.60 772.88 389.37 771.55 387.00 769.17 C 384.62 766.79 383.29 763.57 383.29 760.21 C 383.29 756.85 384.62 753.63 387.00 751.25 C 389.37 748.88 392.60 747.54 395.96 747.54 C 399.32 747.54 402.54 748.88 404.92 751.25 C 407.29 753.63 408.63 756.85 408.63 760.21 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="15"
                    stroke="none"
                    target-height="25.33899"
                    target-width="25.33899"
                    target-x="383.28815"
                    target-y="747.54236"
                  />
                  <path
                    d="M 937.23 537.53 C 939.75 537.53 941.80 539.57 941.80 542.09 L 941.80 552.95 L 952.76 552.95 C 955.28 552.95 957.32 554.99 957.32 557.51 L 957.32 558.30 C 957.32 560.82 955.28 562.86 952.76 562.86 L 941.80 562.86 L 941.80 573.72 C 941.80 576.24 939.75 578.29 937.23 578.29 L 936.45 578.29 C 933.92 578.29 931.88 576.24 931.88 573.72 L 931.88 562.86 L 921.12 562.86 C 918.60 562.86 916.56 560.82 916.56 558.30 L 916.56 557.51 C 916.56 554.99 918.60 552.95 921.12 552.95 L 931.88 552.95 L 931.88 542.09 C 931.88 539.57 933.92 537.53 936.45 537.53 L 937.23 537.53 Z"
                    fill="#0076fc"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="16"
                    stroke="none"
                    target-height="40.762695"
                    target-width="40.762817"
                    target-x="916.5593"
                    target-y="537.5254"
                  />
                  <path
                    d="M 937.23 537.53 C 939.75 537.53 941.80 539.57 941.80 542.09 L 941.80 552.95 L 952.76 552.95 C 955.28 552.95 957.32 554.99 957.32 557.51 L 957.32 558.30 C 957.32 560.82 955.28 562.86 952.76 562.86 L 941.80 562.86 L 941.80 573.72 C 941.80 576.24 939.75 578.29 937.23 578.29 L 936.45 578.29 C 933.92 578.29 931.88 576.24 931.88 573.72 L 931.88 562.86 L 921.12 562.86 C 918.60 562.86 916.56 560.82 916.56 558.30 L 916.56 557.51 C 916.56 554.99 918.60 552.95 921.12 552.95 L 931.88 552.95 L 931.88 542.09 C 931.88 539.57 933.92 537.53 936.45 537.53 L 937.23 537.53 Z M 937.23 539.81 L 936.45 539.81 C 935.19 539.81 934.16 540.83 934.16 542.09 L 934.16 555.23 L 931.88 555.23 L 921.12 555.23 C 919.86 555.23 918.84 556.25 918.84 557.51 L 918.84 558.30 C 918.84 559.56 919.86 560.58 921.12 560.58 L 931.88 560.58 L 934.16 560.58 L 934.16 573.72 C 934.16 574.98 935.19 576.01 936.45 576.01 L 937.23 576.01 C 938.49 576.01 939.51 574.98 939.51 573.72 L 939.51 562.86 L 939.51 560.58 L 941.80 560.58 L 952.76 560.58 C 954.02 560.58 955.04 559.56 955.04 558.30 L 955.04 557.51 C 955.04 556.25 954.02 555.23 952.76 555.23 L 941.80 555.23 L 939.51 555.23 L 939.51 552.95 L 939.51 542.09 C 939.51 540.83 938.49 539.81 937.23 539.81 Z"
                    fill="#0076fc"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="17"
                    stroke="none"
                    target-height="40.762695"
                    target-width="40.762817"
                    target-x="916.5593"
                    target-y="537.5254"
                  />
                  <path
                    d="M 757.82 139.08 C 764.82 139.08 770.49 144.76 770.49 151.75 C 770.49 158.75 764.82 164.42 757.82 164.42 C 750.82 164.42 745.15 158.75 745.15 151.75 C 745.15 144.76 750.82 139.08 757.82 139.08 Z M 757.82 142.37 C 752.64 142.37 748.43 146.57 748.43 151.75 C 748.43 156.94 752.64 161.14 757.82 161.14 C 763.01 161.14 767.21 156.94 767.21 151.75 C 767.21 146.57 763.01 142.37 757.82 142.37 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="18"
                    stroke="none"
                    target-height="25.338974"
                    target-width="25.33899"
                    target-x="745.1526"
                    target-y="139.0847"
                  />
                  <path
                    d="M 289.97 256.38 C 289.97 267.64 280.84 276.76 269.58 276.76 C 258.33 276.76 249.20 267.64 249.20 256.38 C 249.20 245.12 258.33 236.00 269.58 236.00 C 280.84 236.00 289.97 245.12 289.97 256.38 Z"
                    fill="#0076fc"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="19"
                    stroke="none"
                    target-height="40.76271"
                    target-width="40.762695"
                    target-x="249.20343"
                    target-y="235.99995"
                  />
                  <path
                    d="M 269.58 236.00 C 280.84 236.00 289.97 245.12 289.97 256.38 C 289.97 267.64 280.84 276.76 269.58 276.76 C 258.33 276.76 249.20 267.64 249.20 256.38 C 249.20 245.12 258.33 236.00 269.58 236.00 Z M 269.58 238.28 C 259.59 238.28 251.49 246.39 251.49 256.38 C 251.49 266.38 259.59 274.48 269.58 274.48 C 279.58 274.48 287.68 266.38 287.68 256.38 C 287.68 246.39 279.58 238.28 269.58 238.28 Z"
                    fill="#0076fc"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="20"
                    stroke="none"
                    target-height="40.76271"
                    target-width="40.762695"
                    target-x="249.20343"
                    target-y="235.99995"
                  />
                </g>
              </svg>
            </div>
            <div
              class="ant-result-title"
            >
              抱歉，SQL工作台暂时无法访问
            </div>
            <div
              class="ant-result-extra"
            >
              <div
                class="ant-space ant-space-vertical ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 24px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          返回首页
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          建议
                        </strong>
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <ul
                        class="css-oj18o6"
                      >
                        <li>
                          检查URL是否正确输入
                        </li>
                        <li>
                          使用导航菜单查找您需要的页面
                        </li>
                        <li>
                          如果问题持续存在，请联系我们的技术支持团队
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotFoundPage should render correctly with loading state 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <section
          class="basic-result-wrapper css-7vto1s"
        >
          <div
            class="ant-result ant-result-info"
          >
            <div
              class="ant-result-icon"
            >
              <svg
                height="200"
                node-id="1"
                silly-vg="true"
                template-height="1024"
                template-width="1024"
                version="1.1"
                viewBox="0 0 1024 1024"
                width="200"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <defs
                  node-id="22"
                />
                <g
                  node-id="24"
                >
                  <path
                    d="M 914.08 708.00 C 914.08 742.34 871.74 775.28 796.37 799.57 C 721.00 823.85 618.78 837.50 512.19 837.50 C 405.61 837.50 303.39 823.85 228.02 799.57 C 152.65 775.28 110.31 742.34 110.31 708.00 C 110.31 673.65 152.65 640.71 228.02 616.43 C 303.39 592.14 405.61 578.50 512.19 578.50 C 618.78 578.50 721.00 592.14 796.37 616.43 C 871.74 640.71 914.08 673.65 914.08 708.00 Z"
                    fill="#f2f4ff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="6"
                    stroke="none"
                    target-height="259.00006"
                    target-width="803.77386"
                    target-x="110.30799"
                    target-y="578.4955"
                  />
                  <path
                    d="M 350.00 676.00 L 299.00 676.00 L 299.00 541.00 L 162.00 541.00 C 154.27 541.00 148.00 534.73 148.00 527.00 L 148.00 348.00 L 199.00 348.00 L 199.00 490.00 L 299.00 490.00 L 299.00 348.00 L 350.00 348.00 L 350.00 676.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="7"
                    stroke="none"
                    target-height="328.00006"
                    target-width="202"
                    target-x="148.00003"
                    target-y="347.99994"
                  />
                  <path
                    d="M 202.00 345.00 L 202.00 487.00 L 296.00 487.00 L 296.00 345.00 L 353.00 345.00 L 353.00 679.00 L 296.00 679.00 L 296.00 544.00 L 162.00 544.00 C 152.72 544.00 145.18 536.56 145.00 527.32 L 145.00 527.00 L 145.00 345.00 L 202.00 345.00 Z M 196.00 351.00 L 151.00 351.00 L 151.00 527.00 C 151.00 532.98 155.77 537.84 161.71 538.00 L 162.00 538.00 L 302.00 538.00 L 302.00 673.00 L 347.00 673.00 L 347.00 351.00 L 302.00 351.00 L 302.00 493.00 L 196.00 493.00 L 196.00 351.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="8"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00003"
                    target-x="145.00003"
                    target-y="344.99994"
                  />
                  <path
                    d="M 846.00 676.00 L 795.00 676.00 L 795.00 541.00 L 658.00 541.00 C 650.27 541.00 644.00 534.73 644.00 527.00 L 644.00 348.00 L 695.00 348.00 L 695.00 490.00 L 795.00 490.00 L 795.00 348.00 L 846.00 348.00 L 846.00 676.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="9"
                    stroke="none"
                    target-height="328.00006"
                    target-width="201.99994"
                    target-x="644"
                    target-y="347.99994"
                  />
                  <path
                    d="M 698.00 345.00 L 698.00 487.00 L 792.00 487.00 L 792.00 345.00 L 849.00 345.00 L 849.00 679.00 L 792.00 679.00 L 792.00 544.00 L 658.00 544.00 C 648.72 544.00 641.18 536.56 641.00 527.32 L 641.00 527.00 L 641.00 345.00 L 698.00 345.00 Z M 692.00 351.00 L 647.00 351.00 L 647.00 527.00 C 647.00 532.98 651.77 537.84 657.71 538.00 L 658.00 538.00 L 798.00 538.00 L 798.00 673.00 L 843.00 673.00 L 843.00 351.00 L 798.00 351.00 L 798.00 493.00 L 692.00 493.00 L 692.00 351.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="10"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00006"
                    target-x="641"
                    target-y="344.99994"
                  />
                  <g
                    node-id="25"
                  >
                    <path
                      d="M 559.07 454.69 L 559.07 505.69 L 421.00 578.00 L 421.00 527.00 Z"
                      fill="#0076fc"
                      fill-rule="evenodd"
                      group-id="1,2"
                      node-id="11"
                      stroke="none"
                      target-height="123.31146"
                      target-width="138.07074"
                      target-x="420.99988"
                      target-y="454.68848"
                    />
                  </g>
                  <g
                    node-id="26"
                  >
                    <path
                      d="M 562.07 507.50 L 560.46 508.35 L 422.39 580.66 L 418.00 582.96 L 418.00 525.18 L 419.61 524.34 L 557.68 452.03 L 562.07 449.73 L 562.07 507.50 Z M 556.07 503.87 L 556.07 459.65 L 424.00 528.81 L 424.00 573.04 L 556.07 503.87 Z"
                      fill="#000000"
                      fill-rule="nonzero"
                      group-id="1,3"
                      node-id="12"
                      stroke="none"
                      target-height="133.22687"
                      target-width="144.07074"
                      target-x="417.99988"
                      target-y="449.73077"
                    />
                  </g>
                  <path
                    d="M 547.00 676.00 L 447.00 676.00 L 396.00 676.00 L 396.00 348.00 L 598.00 348.00 L 598.00 676.00 L 547.00 676.00 Z M 447.00 399.00 L 447.00 625.00 L 547.00 625.00 L 547.00 399.00 L 447.00 399.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="13"
                    stroke="none"
                    target-height="328.00006"
                    target-width="202.00003"
                    target-x="396.00003"
                    target-y="347.99994"
                  />
                  <path
                    d="M 601.00 345.00 L 601.00 679.00 L 547.00 679.00 L 447.00 679.00 L 396.00 679.00 L 393.00 679.00 L 393.00 345.00 L 601.00 345.00 Z M 595.00 673.00 L 595.00 351.00 L 399.00 351.00 L 399.00 673.00 L 447.00 673.00 L 547.00 673.00 L 595.00 673.00 Z M 444.00 396.00 L 447.00 396.00 L 547.00 396.00 L 550.00 396.00 L 550.00 628.00 L 547.00 628.00 L 447.00 628.00 L 444.00 628.00 L 444.00 396.00 Z M 450.00 402.00 L 450.00 622.00 L 544.00 622.00 L 544.00 402.00 L 450.00 402.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="14"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00003"
                    target-x="393.00003"
                    target-y="344.99994"
                  />
                  <path
                    d="M 408.63 760.21 C 408.63 763.57 407.29 766.79 404.92 769.17 C 402.54 771.55 399.32 772.88 395.96 772.88 C 392.60 772.88 389.37 771.55 387.00 769.17 C 384.62 766.79 383.29 763.57 383.29 760.21 C 383.29 756.85 384.62 753.63 387.00 751.25 C 389.37 748.88 392.60 747.54 395.96 747.54 C 399.32 747.54 402.54 748.88 404.92 751.25 C 407.29 753.63 408.63 756.85 408.63 760.21 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="15"
                    stroke="none"
                    target-height="25.33899"
                    target-width="25.33899"
                    target-x="383.28815"
                    target-y="747.54236"
                  />
                  <path
                    d="M 937.23 537.53 C 939.75 537.53 941.80 539.57 941.80 542.09 L 941.80 552.95 L 952.76 552.95 C 955.28 552.95 957.32 554.99 957.32 557.51 L 957.32 558.30 C 957.32 560.82 955.28 562.86 952.76 562.86 L 941.80 562.86 L 941.80 573.72 C 941.80 576.24 939.75 578.29 937.23 578.29 L 936.45 578.29 C 933.92 578.29 931.88 576.24 931.88 573.72 L 931.88 562.86 L 921.12 562.86 C 918.60 562.86 916.56 560.82 916.56 558.30 L 916.56 557.51 C 916.56 554.99 918.60 552.95 921.12 552.95 L 931.88 552.95 L 931.88 542.09 C 931.88 539.57 933.92 537.53 936.45 537.53 L 937.23 537.53 Z"
                    fill="#0076fc"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="16"
                    stroke="none"
                    target-height="40.762695"
                    target-width="40.762817"
                    target-x="916.5593"
                    target-y="537.5254"
                  />
                  <path
                    d="M 937.23 537.53 C 939.75 537.53 941.80 539.57 941.80 542.09 L 941.80 552.95 L 952.76 552.95 C 955.28 552.95 957.32 554.99 957.32 557.51 L 957.32 558.30 C 957.32 560.82 955.28 562.86 952.76 562.86 L 941.80 562.86 L 941.80 573.72 C 941.80 576.24 939.75 578.29 937.23 578.29 L 936.45 578.29 C 933.92 578.29 931.88 576.24 931.88 573.72 L 931.88 562.86 L 921.12 562.86 C 918.60 562.86 916.56 560.82 916.56 558.30 L 916.56 557.51 C 916.56 554.99 918.60 552.95 921.12 552.95 L 931.88 552.95 L 931.88 542.09 C 931.88 539.57 933.92 537.53 936.45 537.53 L 937.23 537.53 Z M 937.23 539.81 L 936.45 539.81 C 935.19 539.81 934.16 540.83 934.16 542.09 L 934.16 555.23 L 931.88 555.23 L 921.12 555.23 C 919.86 555.23 918.84 556.25 918.84 557.51 L 918.84 558.30 C 918.84 559.56 919.86 560.58 921.12 560.58 L 931.88 560.58 L 934.16 560.58 L 934.16 573.72 C 934.16 574.98 935.19 576.01 936.45 576.01 L 937.23 576.01 C 938.49 576.01 939.51 574.98 939.51 573.72 L 939.51 562.86 L 939.51 560.58 L 941.80 560.58 L 952.76 560.58 C 954.02 560.58 955.04 559.56 955.04 558.30 L 955.04 557.51 C 955.04 556.25 954.02 555.23 952.76 555.23 L 941.80 555.23 L 939.51 555.23 L 939.51 552.95 L 939.51 542.09 C 939.51 540.83 938.49 539.81 937.23 539.81 Z"
                    fill="#0076fc"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="17"
                    stroke="none"
                    target-height="40.762695"
                    target-width="40.762817"
                    target-x="916.5593"
                    target-y="537.5254"
                  />
                  <path
                    d="M 757.82 139.08 C 764.82 139.08 770.49 144.76 770.49 151.75 C 770.49 158.75 764.82 164.42 757.82 164.42 C 750.82 164.42 745.15 158.75 745.15 151.75 C 745.15 144.76 750.82 139.08 757.82 139.08 Z M 757.82 142.37 C 752.64 142.37 748.43 146.57 748.43 151.75 C 748.43 156.94 752.64 161.14 757.82 161.14 C 763.01 161.14 767.21 156.94 767.21 151.75 C 767.21 146.57 763.01 142.37 757.82 142.37 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="18"
                    stroke="none"
                    target-height="25.338974"
                    target-width="25.33899"
                    target-x="745.1526"
                    target-y="139.0847"
                  />
                  <path
                    d="M 289.97 256.38 C 289.97 267.64 280.84 276.76 269.58 276.76 C 258.33 276.76 249.20 267.64 249.20 256.38 C 249.20 245.12 258.33 236.00 269.58 236.00 C 280.84 236.00 289.97 245.12 289.97 256.38 Z"
                    fill="#0076fc"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="19"
                    stroke="none"
                    target-height="40.76271"
                    target-width="40.762695"
                    target-x="249.20343"
                    target-y="235.99995"
                  />
                  <path
                    d="M 269.58 236.00 C 280.84 236.00 289.97 245.12 289.97 256.38 C 289.97 267.64 280.84 276.76 269.58 276.76 C 258.33 276.76 249.20 267.64 249.20 256.38 C 249.20 245.12 258.33 236.00 269.58 236.00 Z M 269.58 238.28 C 259.59 238.28 251.49 246.39 251.49 256.38 C 251.49 266.38 259.59 274.48 269.58 274.48 C 279.58 274.48 287.68 266.38 287.68 256.38 C 287.68 246.39 279.58 238.28 269.58 238.28 Z"
                    fill="#0076fc"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="20"
                    stroke="none"
                    target-height="40.76271"
                    target-width="40.762695"
                    target-x="249.20343"
                    target-y="235.99995"
                  />
                </g>
              </svg>
            </div>
            <div
              class="ant-result-title"
            >
              抱歉，您访问的页面不存在
            </div>
            <div
              class="ant-result-extra"
            >
              <div
                class="ant-space ant-space-vertical ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 24px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          返回首页
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          建议
                        </strong>
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <ul
                        class="css-oj18o6"
                      >
                        <li>
                          检查URL是否正确输入
                        </li>
                        <li>
                          使用导航菜单查找您需要的页面
                        </li>
                        <li>
                          如果问题持续存在，请联系我们的技术支持团队
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotFoundPage should render normal 404 page when not CloudBeaver page 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <section
          class="basic-result-wrapper css-7vto1s"
        >
          <div
            class="ant-result ant-result-info"
          >
            <div
              class="ant-result-icon"
            >
              <svg
                height="200"
                node-id="1"
                silly-vg="true"
                template-height="1024"
                template-width="1024"
                version="1.1"
                viewBox="0 0 1024 1024"
                width="200"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <defs
                  node-id="22"
                />
                <g
                  node-id="24"
                >
                  <path
                    d="M 914.08 708.00 C 914.08 742.34 871.74 775.28 796.37 799.57 C 721.00 823.85 618.78 837.50 512.19 837.50 C 405.61 837.50 303.39 823.85 228.02 799.57 C 152.65 775.28 110.31 742.34 110.31 708.00 C 110.31 673.65 152.65 640.71 228.02 616.43 C 303.39 592.14 405.61 578.50 512.19 578.50 C 618.78 578.50 721.00 592.14 796.37 616.43 C 871.74 640.71 914.08 673.65 914.08 708.00 Z"
                    fill="#f2f4ff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="6"
                    stroke="none"
                    target-height="259.00006"
                    target-width="803.77386"
                    target-x="110.30799"
                    target-y="578.4955"
                  />
                  <path
                    d="M 350.00 676.00 L 299.00 676.00 L 299.00 541.00 L 162.00 541.00 C 154.27 541.00 148.00 534.73 148.00 527.00 L 148.00 348.00 L 199.00 348.00 L 199.00 490.00 L 299.00 490.00 L 299.00 348.00 L 350.00 348.00 L 350.00 676.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="7"
                    stroke="none"
                    target-height="328.00006"
                    target-width="202"
                    target-x="148.00003"
                    target-y="347.99994"
                  />
                  <path
                    d="M 202.00 345.00 L 202.00 487.00 L 296.00 487.00 L 296.00 345.00 L 353.00 345.00 L 353.00 679.00 L 296.00 679.00 L 296.00 544.00 L 162.00 544.00 C 152.72 544.00 145.18 536.56 145.00 527.32 L 145.00 527.00 L 145.00 345.00 L 202.00 345.00 Z M 196.00 351.00 L 151.00 351.00 L 151.00 527.00 C 151.00 532.98 155.77 537.84 161.71 538.00 L 162.00 538.00 L 302.00 538.00 L 302.00 673.00 L 347.00 673.00 L 347.00 351.00 L 302.00 351.00 L 302.00 493.00 L 196.00 493.00 L 196.00 351.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="8"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00003"
                    target-x="145.00003"
                    target-y="344.99994"
                  />
                  <path
                    d="M 846.00 676.00 L 795.00 676.00 L 795.00 541.00 L 658.00 541.00 C 650.27 541.00 644.00 534.73 644.00 527.00 L 644.00 348.00 L 695.00 348.00 L 695.00 490.00 L 795.00 490.00 L 795.00 348.00 L 846.00 348.00 L 846.00 676.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="9"
                    stroke="none"
                    target-height="328.00006"
                    target-width="201.99994"
                    target-x="644"
                    target-y="347.99994"
                  />
                  <path
                    d="M 698.00 345.00 L 698.00 487.00 L 792.00 487.00 L 792.00 345.00 L 849.00 345.00 L 849.00 679.00 L 792.00 679.00 L 792.00 544.00 L 658.00 544.00 C 648.72 544.00 641.18 536.56 641.00 527.32 L 641.00 527.00 L 641.00 345.00 L 698.00 345.00 Z M 692.00 351.00 L 647.00 351.00 L 647.00 527.00 C 647.00 532.98 651.77 537.84 657.71 538.00 L 658.00 538.00 L 798.00 538.00 L 798.00 673.00 L 843.00 673.00 L 843.00 351.00 L 798.00 351.00 L 798.00 493.00 L 692.00 493.00 L 692.00 351.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="10"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00006"
                    target-x="641"
                    target-y="344.99994"
                  />
                  <g
                    node-id="25"
                  >
                    <path
                      d="M 559.07 454.69 L 559.07 505.69 L 421.00 578.00 L 421.00 527.00 Z"
                      fill="#0076fc"
                      fill-rule="evenodd"
                      group-id="1,2"
                      node-id="11"
                      stroke="none"
                      target-height="123.31146"
                      target-width="138.07074"
                      target-x="420.99988"
                      target-y="454.68848"
                    />
                  </g>
                  <g
                    node-id="26"
                  >
                    <path
                      d="M 562.07 507.50 L 560.46 508.35 L 422.39 580.66 L 418.00 582.96 L 418.00 525.18 L 419.61 524.34 L 557.68 452.03 L 562.07 449.73 L 562.07 507.50 Z M 556.07 503.87 L 556.07 459.65 L 424.00 528.81 L 424.00 573.04 L 556.07 503.87 Z"
                      fill="#000000"
                      fill-rule="nonzero"
                      group-id="1,3"
                      node-id="12"
                      stroke="none"
                      target-height="133.22687"
                      target-width="144.07074"
                      target-x="417.99988"
                      target-y="449.73077"
                    />
                  </g>
                  <path
                    d="M 547.00 676.00 L 447.00 676.00 L 396.00 676.00 L 396.00 348.00 L 598.00 348.00 L 598.00 676.00 L 547.00 676.00 Z M 447.00 399.00 L 447.00 625.00 L 547.00 625.00 L 547.00 399.00 L 447.00 399.00 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="13"
                    stroke="none"
                    target-height="328.00006"
                    target-width="202.00003"
                    target-x="396.00003"
                    target-y="347.99994"
                  />
                  <path
                    d="M 601.00 345.00 L 601.00 679.00 L 547.00 679.00 L 447.00 679.00 L 396.00 679.00 L 393.00 679.00 L 393.00 345.00 L 601.00 345.00 Z M 595.00 673.00 L 595.00 351.00 L 399.00 351.00 L 399.00 673.00 L 447.00 673.00 L 547.00 673.00 L 595.00 673.00 Z M 444.00 396.00 L 447.00 396.00 L 547.00 396.00 L 550.00 396.00 L 550.00 628.00 L 547.00 628.00 L 447.00 628.00 L 444.00 628.00 L 444.00 396.00 Z M 450.00 402.00 L 450.00 622.00 L 544.00 622.00 L 544.00 402.00 L 450.00 402.00 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="14"
                    stroke="none"
                    target-height="334.00006"
                    target-width="208.00003"
                    target-x="393.00003"
                    target-y="344.99994"
                  />
                  <path
                    d="M 408.63 760.21 C 408.63 763.57 407.29 766.79 404.92 769.17 C 402.54 771.55 399.32 772.88 395.96 772.88 C 392.60 772.88 389.37 771.55 387.00 769.17 C 384.62 766.79 383.29 763.57 383.29 760.21 C 383.29 756.85 384.62 753.63 387.00 751.25 C 389.37 748.88 392.60 747.54 395.96 747.54 C 399.32 747.54 402.54 748.88 404.92 751.25 C 407.29 753.63 408.63 756.85 408.63 760.21 Z"
                    fill="#ffffff"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="15"
                    stroke="none"
                    target-height="25.33899"
                    target-width="25.33899"
                    target-x="383.28815"
                    target-y="747.54236"
                  />
                  <path
                    d="M 937.23 537.53 C 939.75 537.53 941.80 539.57 941.80 542.09 L 941.80 552.95 L 952.76 552.95 C 955.28 552.95 957.32 554.99 957.32 557.51 L 957.32 558.30 C 957.32 560.82 955.28 562.86 952.76 562.86 L 941.80 562.86 L 941.80 573.72 C 941.80 576.24 939.75 578.29 937.23 578.29 L 936.45 578.29 C 933.92 578.29 931.88 576.24 931.88 573.72 L 931.88 562.86 L 921.12 562.86 C 918.60 562.86 916.56 560.82 916.56 558.30 L 916.56 557.51 C 916.56 554.99 918.60 552.95 921.12 552.95 L 931.88 552.95 L 931.88 542.09 C 931.88 539.57 933.92 537.53 936.45 537.53 L 937.23 537.53 Z"
                    fill="#0076fc"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="16"
                    stroke="none"
                    target-height="40.762695"
                    target-width="40.762817"
                    target-x="916.5593"
                    target-y="537.5254"
                  />
                  <path
                    d="M 937.23 537.53 C 939.75 537.53 941.80 539.57 941.80 542.09 L 941.80 552.95 L 952.76 552.95 C 955.28 552.95 957.32 554.99 957.32 557.51 L 957.32 558.30 C 957.32 560.82 955.28 562.86 952.76 562.86 L 941.80 562.86 L 941.80 573.72 C 941.80 576.24 939.75 578.29 937.23 578.29 L 936.45 578.29 C 933.92 578.29 931.88 576.24 931.88 573.72 L 931.88 562.86 L 921.12 562.86 C 918.60 562.86 916.56 560.82 916.56 558.30 L 916.56 557.51 C 916.56 554.99 918.60 552.95 921.12 552.95 L 931.88 552.95 L 931.88 542.09 C 931.88 539.57 933.92 537.53 936.45 537.53 L 937.23 537.53 Z M 937.23 539.81 L 936.45 539.81 C 935.19 539.81 934.16 540.83 934.16 542.09 L 934.16 555.23 L 931.88 555.23 L 921.12 555.23 C 919.86 555.23 918.84 556.25 918.84 557.51 L 918.84 558.30 C 918.84 559.56 919.86 560.58 921.12 560.58 L 931.88 560.58 L 934.16 560.58 L 934.16 573.72 C 934.16 574.98 935.19 576.01 936.45 576.01 L 937.23 576.01 C 938.49 576.01 939.51 574.98 939.51 573.72 L 939.51 562.86 L 939.51 560.58 L 941.80 560.58 L 952.76 560.58 C 954.02 560.58 955.04 559.56 955.04 558.30 L 955.04 557.51 C 955.04 556.25 954.02 555.23 952.76 555.23 L 941.80 555.23 L 939.51 555.23 L 939.51 552.95 L 939.51 542.09 C 939.51 540.83 938.49 539.81 937.23 539.81 Z"
                    fill="#0076fc"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="17"
                    stroke="none"
                    target-height="40.762695"
                    target-width="40.762817"
                    target-x="916.5593"
                    target-y="537.5254"
                  />
                  <path
                    d="M 757.82 139.08 C 764.82 139.08 770.49 144.76 770.49 151.75 C 770.49 158.75 764.82 164.42 757.82 164.42 C 750.82 164.42 745.15 158.75 745.15 151.75 C 745.15 144.76 750.82 139.08 757.82 139.08 Z M 757.82 142.37 C 752.64 142.37 748.43 146.57 748.43 151.75 C 748.43 156.94 752.64 161.14 757.82 161.14 C 763.01 161.14 767.21 156.94 767.21 151.75 C 767.21 146.57 763.01 142.37 757.82 142.37 Z"
                    fill="#000000"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="18"
                    stroke="none"
                    target-height="25.338974"
                    target-width="25.33899"
                    target-x="745.1526"
                    target-y="139.0847"
                  />
                  <path
                    d="M 289.97 256.38 C 289.97 267.64 280.84 276.76 269.58 276.76 C 258.33 276.76 249.20 267.64 249.20 256.38 C 249.20 245.12 258.33 236.00 269.58 236.00 C 280.84 236.00 289.97 245.12 289.97 256.38 Z"
                    fill="#0076fc"
                    fill-rule="evenodd"
                    group-id="1"
                    node-id="19"
                    stroke="none"
                    target-height="40.76271"
                    target-width="40.762695"
                    target-x="249.20343"
                    target-y="235.99995"
                  />
                  <path
                    d="M 269.58 236.00 C 280.84 236.00 289.97 245.12 289.97 256.38 C 289.97 267.64 280.84 276.76 269.58 276.76 C 258.33 276.76 249.20 267.64 249.20 256.38 C 249.20 245.12 258.33 236.00 269.58 236.00 Z M 269.58 238.28 C 259.59 238.28 251.49 246.39 251.49 256.38 C 251.49 266.38 259.59 274.48 269.58 274.48 C 279.58 274.48 287.68 266.38 287.68 256.38 C 287.68 246.39 279.58 238.28 269.58 238.28 Z"
                    fill="#0076fc"
                    fill-rule="nonzero"
                    group-id="1"
                    node-id="20"
                    stroke="none"
                    target-height="40.76271"
                    target-width="40.762695"
                    target-x="249.20343"
                    target-y="235.99995"
                  />
                </g>
              </svg>
            </div>
            <div
              class="ant-result-title"
            >
              抱歉，您访问的页面不存在
            </div>
            <div
              class="ant-result-extra"
            >
              <div
                class="ant-space ant-space-vertical ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 24px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          返回首页
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          建议
                        </strong>
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <ul
                        class="css-oj18o6"
                      >
                        <li>
                          检查URL是否正确输入
                        </li>
                        <li>
                          使用导航菜单查找您需要的页面
                        </li>
                        <li>
                          如果问题持续存在，请联系我们的技术支持团队
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;
